--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>org.golo-lang</groupId>
             <artifactId>golo</artifactId>
-            <version>0-preview9-SNAPSHOT</version>
+            <version>0-preview9</version>
         </dependency>
 
         <dependency>
