--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
         <jetty.version>9.0.2.v20130417</jetty.version>
     </properties>
 
+	<dependencies>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>${jettyVersion}</version>
+        </dependency>
+    </dependencies>
+	
     <build>
 	    <defaultGoal>clean test compile assembly:single</defaultGoal>
         <plugins>
