--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.typeunsafe</groupId>
-    <artifactId>code-elevator</artifactId>
+    <artifactId>golo-elevator</artifactId>
     <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>golo-code-elevator</name>
+    <name>golo-elevator</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jetty.version>9.0.2.v20130417</jetty.version>
+        <golo.version>0-preview9</golo.version>
+        <spark.core.version>1.1.1</spark.core.version>
+        <jackson.databind.version>2.2.0</jackson.databind.version>
     </properties>
 
 	<dependencies>
@@ -21,8 +24,25 @@
             <artifactId>jetty-server</artifactId>
             <version>${jetty.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.golo-lang</groupId>
+            <artifactId>golo</artifactId>
+            <version>${golo.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>${spark.core.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind.version}</version>
+        </dependency>
     </dependencies>
-	
+
     <build>
 	    <defaultGoal>clean test compile assembly:single</defaultGoal>
         <plugins>
@@ -36,6 +56,19 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.golo-lang</groupId>
+                <artifactId>golo-maven-plugin</artifactId>
+                <version>${golo.version}</version>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>goloc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.1</version>
@@ -43,7 +76,7 @@
                     <execution><goals><goal>java</goal></goals></execution>
                 </executions>
                 <configuration>
-                    <mainClass>Main</mainClass>
+                    <mainClass>elevator.GoloBootstrap</mainClass>
                 </configuration>
             </plugin>
             <plugin>
