--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>Main</mainClass>
+                            <mainClass>GoloBootstrap</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -107,6 +107,25 @@
                     </execution>
                 </executions>
             </plugin>
+			<plugin>
+       <groupId>com.cloudbees</groupId>
+       <artifactId>bees-maven-plugin</artifactId>
+       <version>1.3.2</version>
+     </plugin>
         </plugins>
     </build>
+	
+	 <pluginRepositories>
+   <pluginRepository>
+     <id>cloudbees-public-release</id>
+     <url>http://repository-cloudbees.forge.cloudbees.com/public-release</url>
+     <releases>
+       <enabled>true</enabled>
+     </releases> 
+     <snapshots>
+       <enabled>false</enabled>
+     </snapshots>
+    </pluginRepository>
+ </pluginRepositories>
+ 
 </project>
